deps/chakrashim/core/test/strict/stricteval-deferred.baseline
SyntaxError: Invalid usage of 'eval' in strict mode
	at code (stricteval-deferred.js:8:66)
